test/constrained-generics/basic/generic/error-generic-implements-5.good
error-generic-implements-5.chpl:33: In 'implements IFC1' statement:
error-generic-implements-5.chpl:33: error: when checking this implements statement
error-generic-implements-5.chpl:33: note: the required function reqFun is not implemented
error-generic-implements-5.chpl:12: note: the required function reqFun in the interface IFC1 is declared here
