test/constrained-generics/basic/generic/error-generic-implements-5.future
bug: need to distinguish between associated types of the same interface
